--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,86 @@
-html{
-
-  font-family: "Madimi One", sans-serif;
-
+/*reset*/
+body {
+  margin: 0;
 }
 
-#primeira {
-  height:200px;
-  width:200px;
-  background-color:#32CD32;
-  display: inline-block;
+/*geral*/
+html {
+  font-family: "Truculenta", sans-serif;
 }
 
-#segunda {
-  height:200px;
-  width:200px;
-  background-color:#C71585;
-  display: inline-block;
+h1, h2, h3, h4, h5, p, span {
+  margin: 0;
+  color: #666;
 }
 
-#terceira{
-height:1000px;
-width:1000px;
-background-color:#FFFFFF;
-
+.container {
+  max-width: 1920px;
+  width: 100%;
 }
 
-#quarta{
-  height:200px;
-  width:200px;
-  background-color:#1E90FF;
-
+/*header*/
+header{
+  position: relative;
+  top: 0;
+  height: auto;
+  width: 100%;
 }
+
+/*navbar*/
+nav{
+  position: fixed;
+  top: 0;
+  height: 100px;
+  width: 100%;
+  z-index: 1;
+  background-color: #fff;
+  border-botton: 1px solid #ccc
+}
+
+nav: after{
+  clear: both;
+  content:"";
+  display: block;
+  height: 50px;
+  width: 50px;
+  background-color: #000;
+}
+
+.nav-container{
+  max-width: 1200;
+  position: relative;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#logo{
+  width: 50px;
+  height: 50px;
+  margin-top: 25px;
+}
+
+.nav-container ul{
+  float: right;
+  height: 100px;
+  line-height: 100px;
+  margin: 0;
+}
+
+.nav-container li{
+  list-style: none;
+  float: left;
+  margin: 0 15px;
+}
+
+.nav-container li a{
+  text-decoration: none;
+  color: #666;
+  transition: .5s;
+}
+
+.nav-container li a: hover{
+  color: #3381F3;
+}
+
+
+
